src/parser/DriftConfigParser.java
/* DriftConfigParser.java */
/* Generated By:JavaCC: Do not edit this line. DriftConfigParser.java */
package parser;
import ast.*;
import java.util.ArrayList;
import java.util.List;

public class DriftConfigParser implements DriftConfigParserConstants {

/* ========================================================================== */
/* GRAMMAR RULES                                                              */
/* ========================================================================== */
  final public 
List<MonitorConfig> Root() throws ParseException {List<MonitorConfig> configs = new ArrayList<MonitorConfig>();
  MonitorConfig c;
    label_1:
    while (true) {
      c = MonitorBlock();
configs.add(c);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MONITOR:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(0);
{if ("" != null) return configs;}
    throw new Error("Missing return statement in function");
}

  final public MonitorConfig MonitorBlock() throws ParseException {MonitorConfig config = new MonitorConfig();
  Token t;
    jj_consume_token(MONITOR);
    t = jj_consume_token(IDENTIFIER);
config.monitorName = t.image;
    jj_consume_token(LBRACE);
    jj_consume_token(SOURCE);
    jj_consume_token(COLON);
    t = jj_consume_token(IDENTIFIER);
config.source = t.image;
    jj_consume_token(BASELINE);
    jj_consume_token(COLON);
    t = jj_consume_token(IDENTIFIER);
config.baseline = t.image;
    config.driftCheck = DriftCheckBlock();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FEATURE_DRIFT:{
      config.featureDrift = FeatureDriftBlock();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case METADATA:{
      config.metadata = MetadataBlock();
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    jj_consume_token(RBRACE);
{if ("" != null) return config;}
    throw new Error("Missing return statement in function");
}

  final public DriftCheckConfig DriftCheckBlock() throws ParseException {DriftCheckConfig dcc = new DriftCheckConfig();
  Token tNum, tUnit, tVal, tMethod, tAlert, tSev;
    jj_consume_token(DRIFT_CHECK);
    jj_consume_token(EVERY);
    tNum = jj_consume_token(NUMBER);
    jj_consume_token(UNDERSCORE);
    tUnit = jj_consume_token(TIME_UNIT);
dcc.intervalNumber = Integer.parseInt(tNum.image);
      dcc.intervalUnit = tUnit.image;
    jj_consume_token(LBRACE);
    jj_consume_token(METHOD);
    jj_consume_token(COLON);
    tMethod = jj_consume_token(IDENTIFIER);
dcc.method = tMethod.image;
    jj_consume_token(THRESHOLD);
    jj_consume_token(COLON);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FLOAT:{
      tVal = jj_consume_token(FLOAT);
dcc.threshold = Double.parseDouble(tVal.image);
      break;
      }
    case NUMBER:{
      tVal = jj_consume_token(NUMBER);
dcc.threshold = Double.parseDouble(tVal.image);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(ALERT);
    jj_consume_token(COLON);
    tAlert = jj_consume_token(IDENTIFIER);
dcc.alertChannels.add(tAlert.image);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      tAlert = jj_consume_token(IDENTIFIER);
dcc.alertChannels.add(tAlert.image);
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SEVERITY:{
      jj_consume_token(SEVERITY);
      jj_consume_token(COLON);
      tSev = jj_consume_token(IDENTIFIER);
dcc.severity = tSev.image;
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(RBRACE);
{if ("" != null) return dcc;}
    throw new Error("Missing return statement in function");
}

  final public FeatureDriftConfig FeatureDriftBlock() throws ParseException {FeatureDriftConfig fdc = new FeatureDriftConfig();
  Token tFeat, tMethod, tSig;
    jj_consume_token(FEATURE_DRIFT);
    jj_consume_token(ON);
    jj_consume_token(LBRACKET);
    tFeat = jj_consume_token(IDENTIFIER);
fdc.features.add(tFeat.image);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      tFeat = jj_consume_token(IDENTIFIER);
fdc.features.add(tFeat.image);
    }
    jj_consume_token(RBRACKET);
    jj_consume_token(LBRACE);
    jj_consume_token(METHOD);
    jj_consume_token(COLON);
    tMethod = jj_consume_token(IDENTIFIER);
fdc.method = tMethod.image;
    jj_consume_token(SIGNIFICANCE);
    jj_consume_token(COLON);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FLOAT:{
      tSig = jj_consume_token(FLOAT);
fdc.significance = Double.parseDouble(tSig.image);
      break;
      }
    case NUMBER:{
      tSig = jj_consume_token(NUMBER);
fdc.significance = Double.parseDouble(tSig.image);
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(RBRACE);
{if ("" != null) return fdc;}
    throw new Error("Missing return statement in function");
}

  final public MetadataConfig MetadataBlock() throws ParseException {MetadataConfig mc = new MetadataConfig();
  Token tOwner, tVer, tDesc;
    jj_consume_token(METADATA);
    jj_consume_token(LBRACE);
    jj_consume_token(OWNER);
    jj_consume_token(COLON);
    tOwner = jj_consume_token(STRING_LITERAL);
mc.owner = tOwner.image.substring(1, tOwner.image.length() - 1);
    jj_consume_token(VERSION);
    jj_consume_token(COLON);
    tVer = jj_consume_token(STRING_LITERAL);
mc.version = tVer.image.substring(1, tVer.image.length() - 1);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DESCRIPTION:{
      jj_consume_token(DESCRIPTION);
      jj_consume_token(COLON);
      tDesc = jj_consume_token(STRING_LITERAL);
mc.description = tDesc.image.substring(1, tDesc.image.length() - 1);
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    jj_consume_token(RBRACE);
{if ("" != null) return mc;}
    throw new Error("Missing return statement in function");
}

  /** Generated Token Manager. */
  public DriftConfigParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[9];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x80,0x10000,0x80000,0x80000000,0x8000000,0x8000,0x8000000,0x80000000,0x400000,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x0,0x0,0x0,0x1,0x0,0x0,0x0,0x1,0x0,};
	}

  /** Constructor with InputStream. */
  public DriftConfigParser(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public DriftConfigParser(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new DriftConfigParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 9; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 9; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public DriftConfigParser(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new DriftConfigParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 9; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new DriftConfigParserTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 9; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public DriftConfigParser(DriftConfigParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 9; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(DriftConfigParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 9; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[35];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 9; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		   if ((jj_la1_1[i] & (1<<j)) != 0) {
			 la1tokens[32+j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 35; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  private boolean trace_enabled;

/** Trace enabled. */
  final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
